--- a/app/index.html
+++ b/app/index.html
@@ -27,7 +27,7 @@
 
     <!-- Add your site or application content here -->
     <div class="container" ng-view></div>
-    <script src="components/jquery/jquery.min.js"></script>
+    <!--<script src="components/jquery/jquery.min.js"></script>-->
     <script src="components/angular/angular.js"></script>
     <script src="components/angular-resource/angular-resource.js"></script>
     <script src="components/angular-cookies/angular-cookies.js"></script>
