Updated to use angular-camera bower component

--- a/app/index.html
+++ b/app/index.html
@@ -32,11 +32,11 @@
     <script src="components/angular-resource/angular-resource.js"></script>
     <script src="components/angular-cookies/angular-cookies.js"></script>
     <script src="components/angular-sanitize/angular-sanitize.js"></script>
+    <script src="components/angular-camera/dist/angular-camera.min.js"></script>
 
     <!-- build:js scripts/toolkit-scripts.js -->
     <script src="scripts/app.js"></script>
     <script src="scripts/controllers/main.js"></script>
-    <script src="scripts/directives/camera.js"></script>
     <script src="scripts/directives/connectivity.js"></script>
     <!-- endbuild -->
 
